Update signal list.

--- a/Ntupler/run/2017/ak15/signals.conf
+++ b/Ntupler/run/2017/ak15/signals.conf
@@ -47,7 +47,7 @@
 /ZprimeToTT_M2000_W200_TuneCP2_13TeV-madgraphMLM-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14_ext1-v1/MINIAODSIM
 /ZprimeToTT_M2000_W600_TuneCP2_13TeV-madgraphMLM-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
 /ZprimeToTT_M2000_W600_TuneCP2_13TeV-madgraphMLM-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14_ext1-v1/MINIAODSIM
-### WW
+### WW -> (/BulkGravToWW*/RunIIFall17MiniAODv2-*pmx*/MINIAODSIM)
 /BulkGravToWW_narrow_M-500_13TeV-madgraph/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
 /BulkGravToWW_narrow_M-600_13TeV-madgraph/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
 /BulkGravToWW_narrow_M-800_13TeV-madgraph/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
@@ -57,7 +57,7 @@
 /BulkGravToWW_narrow_M-1600_13TeV-madgraph/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
 /BulkGravToWW_narrow_M-1800_13TeV-madgraph/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
 /BulkGravToWW_narrow_M-2000_13TeV-madgraph/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
-### ZZ
+### ZZ -> (/BulkGravToZZToZhadZhad*/*Fall17*pmx*/MINIAODSIM)
 /BulkGravToZZToZhadZhad_narrow_M-500_13TeV-madgraph/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
 /BulkGravToZZToZhadZhad_narrow_M-600_13TeV-madgraph/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
 /BulkGravToZZToZhadZhad_narrow_M-800_13TeV-madgraph/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
